--- a/barber-saas-projeto-1/start.html
+++ b/barber-saas-projeto-1/start.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia MC</title>
-    <link rel="stylesheet" href="../estilo/index.css">
+    <link rel="stylesheet" href="estilo/index.css">
     <link rel="shortcut icon" href="imagens/barber-shop.png" type="image/png">
 </head>
 <body>
